--- a/ChangeBaseSample.csproj
+++ b/ChangeBaseSample.csproj
@@ -1,9 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <StartupObject>ChangeBaseSample.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="UnitTestSample\**" />
+    <EmbeddedResource Remove="UnitTestSample\**" />
+    <None Remove="UnitTestSample\**" />
+  </ItemGroup>
 
 </Project>
