--- a/UnitTestSample/UnitTestSample.csproj
+++ b/UnitTestSample/UnitTestSample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChangeBaseSample\ChangeBaseSample.csproj" />
+    <ProjectReference Include="..\ChangeBaseSample.csproj" />
   </ItemGroup>
 
 </Project>
